2001-03-21  Uoti Urpala  <uau@wapit.com>

	* gw/bb_smscconn.c: Fixed incorrect test in sms_router, the
	smsc_id of a discarded message was logged only if it _was_ NULL.

2001-03-20  Richard Braakman  <dark@wapit.com>

	* gwlib/http.c: Server side now accepts POST requests.  This
	involved separating the header and body reading code into a
	section shared by server and client side.

	* Fixed a bug along the way which would cause busy-waiting in the
	client code when waiting for a result to arrive.
	Also made return codes consistent for the state functions, so
	that 0 means completion and 1 means waiting for more input.

2001-03-20  Richard Braakman  <dark@wapit.com>

	* Making release 1.1.3.

2001-03-19  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: Fixed a warning.

	* checks/check_compiler.sh: A simple script added that takes a WML 
	source, runs it through the WML compiler and the decompiler and 
	diffes the original file to the output and reports an error if 
	they do differ.

	* test/testcase.wml: A testcase for the check_compiler added.

2001-03-19  Uoti Urpala  <uau@wapit.com>

	* gw/smsc_http.c: Shutdown state was not initialized. Fixed.

2001-03-19  Richard Braakman  <dark@wapit.com>

	* gwlib/http.c: Made parse_http_version() thread-safe.  (There is
	no guarantee that assignment of pointers or longs is atomic.)

2001-03-19  Kalle Marjola  <rpr@wapit.com>

	* gw/bearerbox.c: commented gwthread_join_all() away and now all
	checks pass. Have to investigate this more...

2001-03-19  Richard Braakman  <dark@wapit.com>

	* wap/wsp_session.c: Fix TR_Invoke_Cnf case in find_session_machine(),
	spotted by zig cats.

2001-03-19  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml: added HTTP SMSC chapter

	* gw/smskannel.conf: added sms-service and send-sms for relay use

	* gw/other_smskannel.conf: Added. For client Kannel in Kannel
	relay tests

	* gw/smsc_http.c: little bugfizes/updates
