@@ -1,5 +1,11 @@
 2001-03-21  Uoti Urpala  <uau@wapit.com>
 
+	* gwlib/http.c: Fixed memory leaks, updated keepalive connections
+	to work again after Richard's changes (still left them disabled by
+	default though).
+
+2001-03-21  Uoti Urpala  <uau@wapit.com>
+
 	* gw/bb_smscconn.c: Fixed incorrect test in sms_router, the
 	smsc_id of a discarded message was logged only if it _was_ NULL.
 
